@@ -4,6 +4,8 @@
    (which is the version that Microsoft Windows recognises) much better.
    Note: You may need to resave your tags once to get them to match in future.
  * A sort tags plugin is now provided as tag data is no longer displayed sorted by default.
+ * You can now configure the Picard web-cache which can avoid repeated downloads of 
+   MB data and cover art if you give it enough disk space.
 
 Version 1.2 - 2013-03-30
  * Picard now requires at least Python 2.6
